--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,12 +7,13 @@ services:
       dockerfile: Dockerfile
     cap_add:
       - SETGID
+      - SETUID
     cap_drop:
       - ALL
     networks:
       - private
     ports:
-      - "80:8080"
+      - "80:8088"
 
   php-fpm:
     build:
@@ -21,7 +22,9 @@ services:
     cap_drop:
       - ALL
     networks:
-      - private
+      private:
+        aliases:
+         - phpfpm
     ports:
       - "9000:9000"
 
